<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPACE RUNNER</string>
    <string name="btn_start_text">Play</string>
    <string name="btn_quit_text">Quit</string>
    <string name="game_author_text">2020 For Eva &amp; Quentin By Manu ;)</string>
    <string name="btn_score_text">Score</string>
    <string name="btn_options_text">Options</string>
    <string name="btn_how_to_play_text">How to play</string>
    <string name="select_level_text">Select level</string>
    <string name="btn_back_text">Back</string>
    <string name="options_text">Options</string>
    <string name="enable_sound">Disable sound</string>
    <string name="enable_music">Disable music</string>
    <string name="ship_color">Ship color</string>
    <string name="btn_restart_text">Play again</string>
    <string name="win_status">You win!</string>
    <string name="loose_status">You loose!</string>
    <string name="btn_editor_text">Ship Editor</string>
    <string name="left_wing">Left wing</string>
    <string name="body">Body</string>
    <string name="right_wing">Right wing</string>
    <string name="scale">Scale</string>
    <string name="translate">Translate</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>

</resources>
